[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/pause_menu.png" type="Texture" id=1]
[ext_resource path="res://src/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/images/white_tile.png" type="Texture" id=3]

[sub_resource type="AnimatedTexture" id=1]

[node name="PauseScreen" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteBackground" type="Sprite" parent="."]
position = Vector2( 487.474, 295.672 )
scale = Vector2( 20.35, 10.5931 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 487.474, 295.672 )
scale = Vector2( 0.438908, 0.382217 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 368.041
margin_top = 204.246
margin_right = 381.041
margin_bottom = 224.246
rect_scale = Vector2( 14.0111, 11.1685 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 570.398
margin_top = 416.381
margin_right = 583.398
margin_bottom = 436.381
rect_scale = Vector2( 8.34491, 7.81134 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 236.883
margin_top = 424.431
margin_right = 249.883
margin_bottom = 444.431
rect_scale = Vector2( 9.22531, 7.68929 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
